--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <title>Random Password Generator Demo</title>
 </head>
 <body>
   <div class="container">
-    <h2>Random Password Generator</h2>
+    <h2>Random Generator</h2>
     <div class="result-container">
       <span id="result"></span>
       <button class="btn" id="clipboard">
@@ -17,28 +17,68 @@
     </div>
     <div class="settings">
       <div class="setting">
-        <label>Length: <span id="len">10</span></label>
-        <div>
-          <span>7</span>
-          <input type="range" id="length" min="7" max="36" value="10"  />
-          <span>36</span>
+        <label>Mode: </label>
+        <div class="setting">
+          <input type="radio" name="mode" id="basic" checked value="1" />
+          <label for="basic">Basic</label>
+        </div>
+        <div class="setting">
+          <input type="radio" name="mode" id="advance" value="2" />
+          <label for="advance">Advance</label>
         </div>
       </div>
-      <div class="setting">
-        <label>Include uppercase:</label>
-        <input type="checkbox" id="uppercase" checked />
+      <div class="basic-panel" id="basic-panel">
+        <div class="setting">
+          <label>Length: <span id="len">10</span></label>
+          <div>
+            <span>7</span>
+            <input type="range" id="length" min="7" max="36" value="10" />
+            <span>36</span>
+          </div>
+        </div>
+        <div class="setting">
+          <label>Include uppercase:</label>
+          <input type="checkbox" id="uppercase" checked />
+        </div>
+        <div class="setting">
+          <label>Include lowercase:</label>
+          <input type="checkbox" id="lowercase" checked />
+        </div>
+        <div class="setting">
+          <label>Include numbers:</label>
+          <input type="checkbox" id="numbers" checked />
+        </div>
+        <div class="setting">
+          <label>Include symbols:</label>
+          <input type="checkbox" id="symbols" checked />
+        </div>
       </div>
-      <div class="setting">
-        <label>Include lowercase:</label>
-        <input type="checkbox" id="lowercase" checked />
-      </div>
-      <div class="setting">
-        <label>Include numbers:</label>
-        <input type="checkbox" id="numbers" checked />
-      </div>
-      <div class="setting">
-        <label>Include symbols:</label>
-        <input type="checkbox" id="symbols" checked />
+      <div class="advance-panel hide" id="advance-panel">
+        <div class="setting">
+          <label>Password Pattern</label>
+          <input type="text" id="ptn" placeholder="Please input pattern" />
+        </div>
+        <div class="setting">
+          <label>Min. length</label>
+          <input type="number" id="min_length" min="7" max="20" value="7" />
+        </div>
+        <div class="setting">
+          <label>Max. length</label>
+          <input type="number" id="max_length" min="7" max="20" value="10" />
+        </div>
+        <div class="setting">
+          <label>Allow duplicates</label>
+          <label>
+            <input type="radio" name="duplicate" id="allow_duplicate" value="yes" />YES
+          </label>
+          <label>
+            <input type="radio" name="duplicate" id="disallow_duplicate" checked value="no" />NO
+          </label>
+        </div>
+        <div class="setting">
+          <label>Custom characters</label>
+          <input type="text" id="customs" placeholder="Input some characters" />
+        </div>
       </div>
     </div>
     <button class="btn btn-large" id="generate">
