test selector values

--- a/src/html/test.html
+++ b/src/html/test.html
@@ -7,6 +7,8 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-  <button class="big-button">Click Me!</button>
+  <div class="container wrapper box">
+    <button class="big-button">Click Me!</button>
+  </div>
 </body>
 </html>
